Fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,18 +288,18 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #20354b;
+  color: #031A30;
 }
 
 #hero p {
-  color: #45505b;
+  color: #031A30;
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
-  color: #023a6e;
+  color: #626c75;
   letter-spacing: 1px;
 }
 
@@ -310,7 +310,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .social-links a {
   font-size: 24px;
   display: inline-block;
-  color: #45505b;
+  color: #031A30;
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
